fixed sizing of gallery on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -410,11 +410,12 @@ h2 {
   width: 80%;  
 }
 
-.gallery-section img {
-  width: 125px;
-  height: 125px;
-  margin: 0% 20% 0% 20%;
-  margin-bottom: 5px;
-}
 
+
+.gallery-section img {
+  width: 150px;
+  height: 150px;
+  margin-left: 10%;
+  margin-right: 10%;
+}
 }
